# zzzip

./: Cargo.toml
benches/: read_entry.rs  read_metadata.rs
examples/: extract.rs  extract_lorem.rs  file_info.rs  stdin_info.rs  write_dir.rs  write_sample.rs
src/: aes.rs  aes_ctr.rs  compression.rs  crc32.rs  lib.rs  read.rs  result.rs  spec.rs  types.rs  utils.rs  write.rs  zipcrypto.rs
src/read/: stream.rs
tests/: aes_encryption.rs  end_to_end.rs  zip64_large.rs  zip_crypto.rs
