[package]
name = "zip"
version = "0.6.6"
license = "MIT"
repository = "https://github.com/zip-rs/zip.git"
keywords = ["zip", "archive"]
description = """Library to support the reading and writing of zip files"""
edition = "2021"
rust-version = "1.59.0"

[dependencies]
crc32fast = "1.3.2"
time = { version = "0.3.7", optional = true, default-features = false, features = ["std"] }

# Compression algorithms
bzip2 = { version = "0.4.3", optional = true }
flate2 = { version = "1.0.23", default-features = false, optional = true }
xz2 = { version = "0.1.7", optional = true }
zstd = { version = "0.13", optional = true }

# Crypto
aes = { version = "0.8.2", optional = true }
constant_time_eq = { version = "0.3", optional = true }
hmac = { version = "0.12.1", optional = true, features = ["reset"] }
pbkdf2 = { version = "0.12.0", optional = true }
sha1 = { version = "0.10.1", optional = true }


[dev-dependencies]
byteorder = "1.4.3"
bencher = "0.1.5"
getrandom = "0.2.5"
time = { version = "0.3.7", features = ["formatting", "macros"] }
walkdir = "2.3.2"

[features]
default = ["aes-crypto", "bzip2", "deflate", "time", "zstd", "lzma"]

aes-crypto = ["dep:aes", "dep:constant_time_eq", "dep:hmac", "dep:pbkdf2", "dep:sha1"]

deflate-any = ["dep:flate2"]
deflate = ["flate2/rust_backend", "deflate-any"]
deflate-miniz = ["flate2/default", "deflate-any"]
deflate-zlib = ["flate2/zlib", "deflate-any"]
lzma = ["dep:xz2"]
zstd = ["dep:zstd"]

unreserved = []

[[bench]]
name = "read_entry"
harness = false

[[bench]]
name = "read_metadata"
harness = false
